--- a/MarketSimulation/resources.qrc
+++ b/MarketSimulation/resources.qrc
@@ -8,5 +8,7 @@
         <file alias="decrypt_2">data/decrypt_2.png</file>
         <file alias="decrypt_3">data/decrypt_3.png</file>
         <file alias="market">data/market.png</file>
+        <file alias="arrow-down">data/arrow-down.png</file>
+        <file alias="arrow-up">data/arrow-up.png</file>
     </qresource>
 </RCC>
