Colorised two assets that I missed.

--- a/MarketSimulation/initialallocationscreen.ui
+++ b/MarketSimulation/initialallocationscreen.ui
@@ -77,7 +77,13 @@
          </font>
         </property>
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You must now set your initial allocation between Asset 1 and Asset 2 by moving the slider and then clicking Submit Allocation. &lt;/p&gt;&lt;p&gt;The Next button will become enabled once you have submitted your allocation.&lt;/p&gt;&lt;p&gt;DO NOT CLICK NEXT UNTIL INSTRUCTED &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;You must now set your initial allocation between &lt;span style=&quot; color:#ff0000;&quot;&gt;Asset 1&lt;/span&gt; and &lt;span style=&quot; color:#0000ff;&quot;&gt;Asset 2&lt;/span&gt; by moving the slider and then clicking Submit Allocation. &lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The Next button will become enabled once you have submitted your allocation.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;DO NOT CLICK NEXT UNTIL INSTRUCTED &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
