Digsy's misc text changes

--- a/MarketSimulation/instructionscreen4.ui
+++ b/MarketSimulation/instructionscreen4.ui
@@ -67,7 +67,7 @@
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Well done!&lt;/p&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;You may change your allocation at any time. Once the experiment is complete you will be paid your investment value. Your investment value is displayed under the slider.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;You may change your allocation at any time. Once the experiment is complete you will be paid your investment value.&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;You are also able to earn money by completing a decryption task. In the decryption task you will use a decryption key to decipher an encrypted word. Each decryption you complete will add 10 cents to your final payment.&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The task will be completed on a screen like the one shown on the next page. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
